add url for new logo

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="row footer-section">
     <div class="col mb-3">
         <a href="" class="d-flex align-items-center mb-3 footer-logo">
-            <img src="" alt="logo" width="80%">
+            <img src="/assets/logorougeparrot.png" alt="logo" width="80%">
         </a>
         <p>&copy; {{ compagnyCopyright }}</p>
     </div>
