--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="index.html"></a>
-        <img src="" width="100" height="100" alt="logoparrot">
+        <img src="/assets/logorougeparrot.png" width="100" height="100" alt="logoparrot">
     
     <!-- Bouton de bascule pour les petits écrans -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
