app routes for service page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 
 <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html"></a>
+    <a class="navbar-brand" routerLink="/"></a>
         <img src="/assets/logorougeparrot.png" width="100" height="100" alt="logoparrot">
     
     <!-- Bouton de bascule pour les petits écrans -->
@@ -13,15 +13,15 @@
     <div class="collapse navbar-collapse navbar" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item navbar">
-                <a class="nav-link " href="">Nos services <span class="sr-only"></span></a>
+                <a class="nav-link " routerLink="/service">Nos services <span class="sr-only"></span></a>
             </li>
 
             <li class="nav-item navbar">
-                <a class="nav-link" href="#">Nos véhicules</a>
+                <a class="nav-link" routerLink="/">Nos véhicules</a>
             </li>
 
             <li class="nav-item navbar">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" routerLink="/">Contact</a>
             </li>
         </ul>
     </div>
