--- a/src/app/pages/general/header/header.component.html
+++ b/src/app/pages/general/header/header.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar">
     <div class="navbar-brand">
-        <a routerLink="">
+        <a routerLink=""> <!-- route générique pour le logo destination homepage-->
             <img src="assets/logorougeparrot.png" alt="logo" width="90" height="90">
         </a>
     </div>
