--- a/src/app/pages/general/home/home.component.html
+++ b/src/app/pages/general/home/home.component.html
@@ -1,7 +1,9 @@
+<app-header></app-header>
+
 <!-- overlay w/img + text + button -->
 <div class="overlay">
     <p>" Accordez à votre voiture l'attention qu'elle mérite chez Parrot Automobile <br>où l'excellence mécanique rencontre le service exceptionnel "</p>
-    <a routerLink="/" class="btn btn-sm btn-primary btn-hover-darken">En savoir plus</a>
+    <a routerLink="/occasions" class="btn btn-sm btn-primary btn-hover-darken">En savoir plus</a>
 </div>
 
  <!-- ajout d'un titre avant la section cards -->
@@ -49,7 +51,7 @@
 <!-- Nouvelle rangée pour le bouton -->
 <div class="row justify-content-center">
     <div class="col-md-6 text-center">
-        <a routerLink="/service" class="btn btn-sm btn-primary btn-hover-darken">Voir plus</a>
+        <a routerLink="/services" class="btn btn-sm btn-primary btn-hover-darken">Voir plus</a>
     </div>
 </div>
 
@@ -117,3 +119,4 @@
         </div>
     </div>
 
+<app-footer></app-footer>
