--- a/src/app/pages/general/contact/contact.component.html
+++ b/src/app/pages/general/contact/contact.component.html
@@ -1,1 +1,44 @@
-<p>contact works!</p>
+<app-header></app-header>
+
+<!-- Titre avant cards service -->
+<div class="row">
+    <div class="col-12">
+        <h1 class="title-contact">Contactez-nous</h1>
+    </div>
+</div>
+
+<!-- formulaire -->
+<div class="text-center">
+    <form (ngSubmit)="onSubmitForm()">
+        <div class="form-group mb-4">
+            <input type="text" id="nom" name="nom" required [(ngModel)]="nom" class="form-control" placeholder="Nom">      
+        </div>
+
+        <div class="form-group mb-4"> 
+            <input type="text" id="prenom" name="prenom" required [(ngModel)]="prenom" class="form-control" placeholder="Prenom">
+        </div>
+
+        <div class="form-group mb-4">   
+            <input type="email" id="mail" name="mail" required [(ngModel)]="mail" class="form-control" placeholder="E-mail">
+        </div>
+
+        <div class="form-group mb-4">        
+            <input type="tel" id="number" name="number" required [(ngModel)]="number" class="form-control" placeholder="Numero" >
+        </div>
+
+        <div class="form-group mb-4">
+            <textarea id="message" name="message" rows="4" required [(ngModel)]="message" class="form-control" placeholder="Message"></textarea>
+        </div>
+        
+        <div class="form-group mb-4">
+            <div>
+                <input type="checkbox" id="notRobot" name="notRobot">
+                <label for="notRobot" required [(ngModel)]="notRobot">Je ne suis pas un robot</label>
+            </div>
+        </div>
+    
+      <button type="submit" class="send">Envoyer</button>
+    </form>
+</div>
+
+<app-footer></app-footer>
