--- a/src/app/pages/general/application/cars-content/cars-content.component.html
+++ b/src/app/pages/general/application/cars-content/cars-content.component.html
@@ -1,7 +1,24 @@
 <app-header></app-header>
 
-
-
+<div class="container mt-4">
+    <div *ngIf="car">
+      <div class="row">
+        <div class="col-md-6">
+          <img [src]="car.image" alt="{{ car.title }} Image" class="img-fluid">
+        </div>
+        <div class="col-md-6">
+          <h2>{{ car.title }}</h2>
+          <p><strong>Price:</strong> {{ car.price }} €</p>
+          <p><strong>Year:</strong> {{ car.year }}</p>
+          <p><strong>Kilometrage:</strong> {{ car.mileage }} Km</p>
+          <p><strong>Fuel:</strong> {{ car.fuel }}</p>
+        </div>
+      </div>
+    </div>
+    <div *ngIf="!car">
+      <p>Car not found.</p>
+    </div>
+  </div>
 
 
 <app-footer></app-footer>
