--- a/src/app/pages/general/application/cars/cars.component.html
+++ b/src/app/pages/general/application/cars/cars.component.html
@@ -60,7 +60,7 @@
     
             <div class="col-8 d-flex flex-column align-items-start justify-content-between">
                 <div>
-                    <h5 class="card-title">{{ car.title }}</h5>
+                    <a [routerLink]="['/cars', car.id]" class="card-title" (click)="navigateToContent(car.id)">{{ car.title }}</a>
                     <p class="card-p">{{ car.price }} €</p>
                 </div>
     
@@ -103,7 +103,7 @@
 
         <div class="col-8 d-flex flex-column align-items-start justify-content-between">
             <div>
-                <a routerLink="/cars-content" class="card-title">{{ car.title }}</a>
+                <a [routerLink]="['/cars', car.id]" class="card-title" (click)="navigateToContent(car.id)">{{ car.title }}</a>
                 <p class="card-p">{{ car.price }} €</p>
             </div>
 
