--- a/src/app/pages/general/application/cars-content/cars-content.component.html
+++ b/src/app/pages/general/application/cars-content/cars-content.component.html
@@ -1,20 +1,80 @@
 <app-header></app-header>
 
-<div class="container mt-4">
+<div>
     <div *ngIf="car">
       <div class="row">
         <div class="col-md-6">
-          <img [src]="car.image" alt="{{ car.title }} Image" class="img-fluid">
+          <img [src]="car.image" alt="{{ car.title }} Image" class="img-fluid custom-image">
         </div>
+        <!-- form -->
         <div class="col-md-6">
-          <h2>{{ car.title }}</h2>
-          <p><strong>Price:</strong> {{ car.price }} €</p>
-          <p><strong>Year:</strong> {{ car.year }}</p>
-          <p><strong>Kilometrage:</strong> {{ car.mileage }} Km</p>
-          <p><strong>Fuel:</strong> {{ car.fuel }}</p>
+          
         </div>
       </div>
     </div>
+
+    <!-- description véhicule -->
+    <div class="row">
+        <h2 class="title-content">{{ car.title }}</h2>
+        <h4 class="text-content"> {{ car.price | number }} €</h4>
+        <div class="row mb-3">
+            <div class="d-flex">
+                <p class="text-year"> {{ car.year }}</p>
+                <p class="text-mileage"> {{ car.mileage | number }} Km</p>
+                <p class="text-fuel">{{ car.fuel }}</p>
+            </div>
+        </div>
+
+    <!-- tableau critères véhicules -->
+    <h4 class="table-title">Critères</h4>
+
+        <div class="row">
+            <div class="col-md-6 d-flex">
+                <div class="col-sm">
+                    <p class="crit-title">Marque</p>
+                    <span class="crit-desc">{{ car.brand }}</span>
+                </div>
+
+                <div class="col-sm">
+                    <p class="crit-title">Année</p>
+                    <span class="crit-desc">{{ car.year }}</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 d-flex">
+                <div class="col-sm">
+                    <p class="crit-title">Kilométrage</p>
+                    <span class="crit-desc">{{ car.mileage | number }}</span>
+                </div>
+
+                <div class="col-sm">
+                    <p class="crit-title">Boîte de vitesse</p>
+                    <span class="crit-desc">{{ car.gearbox}}</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 d-flex mb-5">
+                <div class="col-sm">
+                    <p class="crit-title">Nombre de portes</p>
+                    <span class="crit-desc"> {{ car.door }}</span>
+                </div>
+
+                <div class="col-sm">
+                    <p class="crit-title">Couleur</p>
+                    <span class="crit-desc">{{ car.color }}</span>
+                </div>
+            </div>
+        </div>
+    
+
+        
+          
+    
+    <!-- affichage si cars non trouvé -->
     <div *ngIf="!car">
       <p>Car not found.</p>
     </div>
