--- a/src/app/pages/general/application/cars-content/cars-content.component.html
+++ b/src/app/pages/general/application/cars-content/cars-content.component.html
@@ -6,12 +6,36 @@
         <div class="col-md-6">
           <img [src]="car.image" alt="{{ car.title }} Image" class="img-fluid custom-image">
         </div>
+
         <!-- form -->
-        <div class="col-md-6">
-          
+        <div class="col-md-4 mx-5">
+          <h3 class="form-title mb-4">Contactez-nous au sujet de {{ car.title }} :</h3>
+
+          <form (submit)="submitForm()">
+            <div class="form-group mb-3">
+                <input type="text" id="fullName" name="fullname" class="form-control" required placeholder="Nom">
+            </div>
+
+            <div class="form-group mb-4">
+                <input type="text" id="email" name="email" class="form-control" required placeholder="E-mail">
+            </div>
+
+            <div class="form-group mb-3">
+                <textarea type="text" id="message" name="message" class="form-control" rows="4" required placeholder="Message"></textarea>
+            </div>
+
+            <button type="submit" class="btn custom-button">Envoyer</button>
+          </form>
+
+          <p class="reponse-msg mt-5">* Délai de traitement des réponses sous 24H </p>
+
         </div>
-      </div>
+
+            
+     
+
     </div>
+</div>
 
     <!-- description véhicule -->
     <div class="row">
